[package]
name = "rng256"
version = "0.1.0"
authors = [
  "Fabian Kaczmarczyck <kaczmarczyck@google.com>",
  "Guillaume Endignoux <guillaumee@google.com>",
  "Jean-Michel Picod <jmichel@google.com>",
]
license = "Apache-2.0"
edition = "2018"

[dependencies]
libtock_drivers = { path = "../../third_party/libtock-drivers" }
arrayref = "0.3.6"
rand = { version = "0.6.5", optional = true }

# We explicitly lock the version of those transitive dependencies because their
# Cargo.toml don't parse with the nightly compiler used by Tock. Remove this
# whole block once CTAP is a library.
proc-macro2 = { version = "=1.0.43", optional = true }

[features]
std = ["rand"]
