[package]
name = "fuzz-store"
version = "0.0.0"
authors = ["Julien Cretin <cretin@google.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.3"
persistent_store = { path = "..", features = ["std"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "store"
path = "fuzz_targets/store.rs"
